# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2015-06-14 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Resolve file modeline differences
    * Add a minimal CloudI configuration file to use when the
      integration tests are disabled
    * Fix some minor problems in the dashboard
    * Add the dashboard to the default configurations
    * Fix cloudi_service_db_cassandra_cql app file version
    * Fix cloudi_service_db_riak and cloudi_service_oauth1
      app file version and modelines

2015-06-14 Bruce Kissinger   <brucekissinger [at] gmail (dot) com>

    * Add the CloudI dashboard

2015-06-13 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix service configuration option request_timeout_immediate_max usage
      in combination with queue_limit, queue_size, and/or rate_request_max 

2015-06-08 Francisco Marchal   <marchal.francisco [at] gmail (dot) com>

    * Fix vim modified flag at opening file

2015-06-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix node.js detection for v0.12 usage of 'nodejs' binary

2015-06-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Simplify the conversion from Erlang types to msgpack types
      (in cloudi_response:external_format/2)

2015-06-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the rate_request_max service configuration option

2015-06-01 Francisco Marchal   <marchal.francisco [at] gmail (dot) com>

    * Fix 'make install DESTDIR=pkgdir/'

2015-05-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove the old service name paths from cloudi_service_api_requests
      (along with adding more error handling)
    * Add msgpack cloudi_core integration for cloudi_request and cloudi_response
      usage (with 'external_format' in cloudi_service_db_mysql and
      cloudi_service_db_pgsql)
    * Disable binary handling in cloudi_service_db_couchdb and
      cloudi_service_db_tokyotyrant