@@ -15,7 +15,8 @@
    {module, cloudi_service_filesystem},
    {args,
     [{directory, "@cloudi_logdir@"},
-     {refresh, 60}]},
+     {read, [{"/cloudi/log/cloudi.log", -16384}]},
+     {refresh, 10}]},
    {dest_refresh, none}],
   [{prefix, "/"},
    {module, cloudi_service_http_cowboy},
